@@ -11,6 +11,8 @@
 	* src/search.c (do_research): Use 'return' instead of 'else'.
 	* src/search.c (do_search): Don't bother setting 'answer'; just	use
 	'last_search', which has been set to 'answer' in search_init().
+	* src/search.c (go_looking): Factor out the common part of
+	do_search() and do_research() into this new function.
 
 2016-03-19  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (search_init): Always remember the last typed string,
